--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,6 +7,9 @@
 @use '../components/UI/ForYouList/ForYouList';
 @use '../components/UI/JustAdded/JustAdded';
 @use '../components/UI/PosterView/PosterView';
+@use '../components/UI/CastInfo/CastInfo';
+@use '../components/UI/Account/Account';
+@use '../components/UI/SearchModal/SearchModal';
 
 
 
