--- a/components/UI/Account/_Account.scss
+++ b/components/UI/Account/_Account.scss
@@ -4,11 +4,11 @@
   right: 0;
   height: calc(100vh - 60px);
   margin-top: 60px;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0,0,0,.3);
   display: flex;
   backdrop-filter: blur(70px);
-  transform: translate3d(100%, 0, 0);
-  transition: transform 0.3s ease-in-out;
+  transform: translate3d(100%, 0,0);
+  transition: transform .4s ease-in-out;
   &--active {
     transform: translate3d(0, 0, 0);
   }
@@ -24,8 +24,8 @@
   &__watch-list {
     display: grid;
     flex-wrap: wrap;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
     padding: 0 20px;
   }
   &__watch-video {
