--- a/components/UI/Header/_header.scss
+++ b/components/UI/Header/_header.scss
@@ -11,6 +11,9 @@
     width: 100%;
     z-index: 10;
     transition: background .3s ease-in-out;
+    &--menu-open{
+        background: black;
+    }
     &:hover{
         background-color: rgba(0,0,0,1);
     }
