--- a/components/UI/MediaRow/_MediaRow.scss
+++ b/components/UI/MediaRow/_MediaRow.scss
@@ -1,4 +1,4 @@
-.poster-view{
+.media-row {
   padding: 20px 0 20px 50px;
   &__title {
     font-weight: 500;
@@ -17,17 +17,14 @@
       display: none;
     }
   }
+
   &__thumbnail {
-    width: 240px;
-    height: 360px;
     position: relative;
     margin-right: 10px;
     img {
-      width: 240px;
-      height: 360px;
-      position: relative;
       object-fit: cover;
       object-position: center;
+      flex-shrink: 0;
     }
   }
   &__top-layer {
@@ -66,4 +63,46 @@
       transition: all 0.3s ease-in-out 0.2s;
     }
   }
+
+  &.large-v {
+    .media-row__thumbnail {
+      width: 400px;
+      height: 600px;
+      img{
+        width: 400px;
+        height: 600px;
+      }
+    }
+  }
+  &.small-v {
+    .media-row__thumbnail {
+      width: 240px;
+      height: 360px;
+      img {
+        width: 240px;
+        height: 360px;
+      }
+    }
+  }
+  &.large-h {
+    .media-row__thumbnail {
+      width: 700px;
+      height: 394px;
+      img {
+        width: 700px;
+        height: 394px;
+      }
+    }
+  }
+  &.small-h {
+    .media-row__thumbnail {
+      width: 450px;
+      height: 253px;
+      img {
+        width: 450px;
+        height: 253px;
+      }
+    }
+  }
+ 
 }
