--- a/components/UI/MediaRow/_MediaRow.scss
+++ b/components/UI/MediaRow/_MediaRow.scss
@@ -12,7 +12,6 @@
     min-width: 100%;
     width: calc(100vw - 70px);
     overflow-x: scroll;
-
     &::-webkit-scrollbar {
       display: none;
     }
@@ -27,6 +26,7 @@
       flex-shrink: 0;
     }
   }
+ 
   &__top-layer {
     background: rgb(94, 255, 245);
     background: linear-gradient(
@@ -64,45 +64,117 @@
     }
   }
 
-  &.large-v {
-    .media-row__thumbnail {
-      width: 400px;
-      height: 600px;
-      img{
+  .media-row__thumbnail-skeleton-img{
+    background:rgb(19, 19, 19);
+    margin:10px 0px;
+    position:relative;
+    overflow:hidden;
+  }
+  
+  .media-row__thumbnail-skeleton-img::before{
+    content:"";
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    background:rgba(255, 255, 255, 0.082);
+    height:100%;
+    transform:skew(5deg);
+    animation:shine infinite 1.5s ease-in-out;
+    filter: blur(100px);
+  }
+  
+  
+  @keyframes shine {
+    from {
+    transform:skew(45deg) translateX(-200%);
+    }
+    
+    to{
+      transform:skew(45deg) translateX(300%);
+    }
+  }
+    &.large-v {
+      .media-row__thumbnail {
+        width: 400px;
+        height: 600px;
+        img {
+          width: 400px;
+          height: 600px;
+        }
+      }
+      .media-row__thumbnail-skeleton{
+        width: 400px;
+        height: 600px;
+        margin-right: 10px;
+      }
+      .media-row__thumbnail-skeleton-img{
         width: 400px;
         height: 600px;
       }
     }
-  }
-  &.small-v {
-    .media-row__thumbnail {
-      width: 240px;
-      height: 360px;
-      img {
+    &.small-v {
+      .media-row__thumbnail {
+        width: 240px;
+        height: 360px;
+        img {
+          width: 240px;
+          height: 360px;
+        }
+      }
+      .media-row__thumbnail-skeleton{
+        width: 240px;
+        height: 360px;
+        margin-right: 10px;
+      }
+      .media-row__thumbnail-skeleton-img{
         width: 240px;
         height: 360px;
       }
     }
-  }
-  &.large-h {
-    .media-row__thumbnail {
-      width: 700px;
-      height: 394px;
-      img {
+    &.large-h {
+      .media-row__thumbnail {
+        width: 700px;
+        height: 394px;
+        img {
+          width: 700px;
+          height: 394px;
+        }
+      }
+      .media-row__thumbnail-skeleton{
+        width: 700px;
+        height: 394px;
+        margin-right: 10px;
+      }
+      .media-row__thumbnail-skeleton-img{
         width: 700px;
         height: 394px;
       }
     }
-  }
-  &.small-h {
-    .media-row__thumbnail {
-      width: 450px;
-      height: 253px;
-      img {
+    &.small-h {
+      .media-row__thumbnail {
+        width: 450px;
+        height: 253px;
+        img {
+          width: 450px;
+          height: 253px;
+        }
+      }
+      .media-row__thumbnail-skeleton{
+        width: 450px;
+        height: 253px;
+        margin-right: 10px;
+      }
+      .media-row__thumbnail-skeleton-img{
         width: 450px;
         height: 253px;
       }
     }
   }
- 
-}
+  
+  
+  @media only screen and (max-width: 600px) {
+    .media-row{
+      padding: 20px;
+    }
+  }
