Create individual movie page, Linking Thumbnails to correct page, and Show This Similar Movies and Cast

--- a/components/UI/Header/_header.scss
+++ b/components/UI/Header/_header.scss
@@ -11,6 +11,7 @@
     width: 100%;
     z-index: 10;
     transition: background .3s ease-in-out;
+   
     &--menu-open{
         background: black;
     }
@@ -23,6 +24,7 @@
         width: 129px;
         background-image: url(/img/logo.svg);
         transform: scale(.9);
+        cursor: pointer;
     }
     &__left-side{
         display: flex;
