--- a/components/UI/FeaturedMedia/_featured-media.scss
+++ b/components/UI/FeaturedMedia/_featured-media.scss
@@ -8,6 +8,16 @@
   &__video {
     position: absolute;
     z-index: 1;
+
+    transform: scale(1.5);
+  }
+  &__img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    z-index: 1;
     transform: scale(1.5);
   }
   &__bg {
@@ -34,6 +44,7 @@
     font-weight: 700;
     color: white;
     margin-bottom: 1rem;
+    cursor: pointer;
   }
   &__playing {
     font-size: 0.9rem;
@@ -75,18 +86,17 @@
       cursor: pointer;
     }
   }
-  &__info-btn{
-      background: grey;
-      color: white;
-      font-weight: 700;
-      font-size: .8rem;
-      width: 100px;
-      height: 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 20px;
-      cursor: pointer;
-      
+  &__info-btn {
+    background: grey;
+    color: white;
+    font-weight: 700;
+    font-size: 0.8rem;
+    width: 100px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    cursor: pointer;
   }
 }
